# lana-scenario-gen

./: .gitignore  Makefile  README.md  pyproject.toml
scenarios/: happy_path_loan.yml  loan_default.yml  simple_customer.yml
scenarios/collateral/: 01_manual_update.yml  02_custodian_sync.yml  03_topup.yml  04_withdrawal.yml  05_price_drop.yml  06_price_recovery.yml
scenarios/customer/: 01_simple.yml  02_kyc_approved.yml  03_kyc_rejected.yml  04_prospect_conversion.yml  05_business.yml
scenarios/deposit/: 01_success.yml  02_reverted.yml  03_withdrawal_success.yml  04_withdrawal_denied.yml  05_large_withdrawal.yml
scenarios/edge/: 01_multi_year.yml  02_concurrent.yml  03_zero_interest.yml  04_max_ltv.yml  05_committee.yml  06_reports.yml  07_price_events.yml  08_bootstrap.yml
scenarios/loan/: 01_happy_path.yml  02_proposal_denied.yml  03_disbursal_denied.yml  04_late_payment.yml  05_default.yml  06_margin_call_recovery.yml  07_partial_liquidation.yml  08_early_repayment.yml  09_multiple_disbursals.yml  10_customer_cancels.yml  11_full_liquidation.yml  12_long_term.yml
scenarios/payment/: 01_on_time.yml  02_overdue.yml  03_defaulted.yml  04_partial.yml  05_overpayment.yml  06_multi_allocation.yml
src/lana_scenario_gen/: __init__.py  cli.py
src/lana_scenario_gen/docs/: __init__.py  doc_generator.py
src/lana_scenario_gen/generator/: __init__.py  id_tracker.py  sql_generator.py
src/lana_scenario_gen/parser/: __init__.py  rust_parser.py  schema.py
src/lana_scenario_gen/runner/: __init__.py  pg_runner.py
